--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -10,12 +10,12 @@
 
 {% block page-header %}
     <h1>博客列表</h1>
+    {% render_notice_links %}
 {% endblock %}
 
 {% block page-body %}
     <div class="row blog">
         <div class="col-md-4">
-{#            {% render_notice_links %}#}
             {% render_month_links %}
             {% render_category_links %}
             {% render_assess_links %}
