--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="ThemeBucket">
-    <link rel="shortcut icon" href="#" type="image/png">
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/png">
 
     <title>
     {% block title %}
@@ -32,10 +32,10 @@
     <div class="left-side sticky-left-side">
         <!--logo and iconic logo start-->
         <div class="logo">
-            <a href="index.html"><img src="{% static "images/logo.png" %}" alt=""></a>
+            <a href="{% url 'blog:index' %}"><img src="{% static "images/logo.png" %}" alt=""></a>
         </div>
         <div class="logo-icon text-center">
-            <a href="index.html"><img src="{% static "images/logo_icon.png" %}" alt=""></a>
+            <a href="{% url 'blog:index' %}"><img src="{% static "images/logo_icon.png" %}" alt=""></a>
         </div>
         <!--logo and iconic logo end-->
 
@@ -58,7 +58,7 @@
         <!--toggle button end-->
 
         <!--search start-->
-        <form class="searchform" action="index.html" method="post">
+        <form class="searchform" action="{% url 'blog:index' %}" method="post">
             <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
         </form>
         <!--search end-->
@@ -72,19 +72,19 @@
                         <i class="fa fa-bell-o"></i>
                         <span class="badge">1</span>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-head pull-right">
-                        <h5 class="title">通知</h5>
-                        <ul class="dropdown-list normal-list">
-                            <li class="new">
-                                <a href="">
-                                    <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                    <span class="name">Server #1 overloaded.  </span>
-                                    <em class="small">34 mins</em>
-                                </a>
-                            </li>
-                            <li class="new"><a href="">显示所有通知</a></li>
-                        </ul>
-                    </div>
+{#                    <div class="dropdown-menu dropdown-menu-head pull-right">#}
+{#                        <h5 class="title">通知</h5>#}
+{#                        <ul class="dropdown-list normal-list">#}
+{#                            <li class="new">#}
+{#                                <a href="">#}
+{#                                    <span class="label label-danger"><i class="fa fa-bolt"></i></span>#}
+{#                                    <span class="name">Server #1 overloaded.  </span>#}
+{#                                    <em class="small">34 mins</em>#}
+{#                                </a>#}
+{#                            </li>#}
+{#                            <li class="new"><a href="">显示所有通知</a></li>#}
+{#                        </ul>#}
+{#                    </div>#}
                 </li>
                 <li>
                     <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -94,7 +94,7 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-                        <li><a href="#"><i class="fa fa-user"></i>  个人信息</a></li>
+{#                        <li><a href="{% url 'account:profile' %}"><i class="fa fa-user"></i>  个人信息</a></li>#}
                         <li><a href="{% url 'account:logout' %}"><i class="fa fa-sign-out"></i> 注销</a></li>
                     </ul>
                 </li>
@@ -120,7 +120,6 @@
         <!-- page heading start-->
         <div class="page-heading">
             {% block page-header %}
-                <h1>标题</h1>
             {% endblock %}
         </div>
         <!-- page heading end-->
@@ -128,7 +127,6 @@
         <!--body wrapper start-->
         <div class="wrapper">
             {% block page-body %}
-                <p>Page-Body</p>
             {% endblock %}
         </div>
         <!--body wrapper end-->
