v 1.0.0 change __str__ to __unicode__

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{#{% load static %}#}
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -89,7 +90,8 @@
                 <li>
                     <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 {#                        <img src="{% static "images/photos/user-avatar.png" %}" alt="" />#}
-                        <img src="{% static user.user_profile.avatar %}" alt="" />
+{#                        <img src="{% static user.user_profile.avatar %}" alt="" />#}
+                        <img src="{%  user.user_profile.avatar %}  " alt="" />
                         {{ user.username }}
                         <span class="caret"></span>
                     </a>
