v 1.0.0 修改了最新修改样式 修改了404.html， 500.html中的错误链接

--- a/accounts/templates/accounts/registration.html
+++ b/accounts/templates/accounts/registration.html
@@ -92,7 +92,7 @@
 
             <div class="registration">
                 Already Registered.
-                <a href="login.html" class="">
+                <a href="{% url 'account:login' %}" class="">
                     Login
                 </a>
             </div>
