--- a/templates/404.html
+++ b/templates/404.html
@@ -29,7 +29,7 @@
             <h1><img alt="" src="{% static "images/404-error.png" %}"></h1>
             <h2>page not found</h2>
             <h3>We Couldn’t Find This Page</h3>
-            <a class="back-btn" href="index.html"> Back To Home</a>
+            <a class="back-btn" href="{% url 'blog:index' %}"> Back To Home</a>
         </section>
 
     </div>
