--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,17 +15,19 @@
 
 {% block page-body %}
     <div class="row blog">
-        <div class="col-md-4">
+        <div class="col-md-3">
             {% render_month_links %}
             {% render_category_links %}
             {% render_assess_links %}
         </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
             <div class="panel">
                 <div class="panel-body">
-                    <h1 class="text-center mtop35"><a href="#">{{ object.headline }}</a></h1>
-                    <p class="text-center auth-row">
-                        By <a href="#">{{ object.author }}</a>   |   {{ object.pub_date | date:'Y-m-d H:i:s' }}   | <a href="#">5 Comments</a>
+                    <h1 class="mtop35"><a href="#">{{ object.headline }}</a></h1>
+                    <p class="auth-row">
+                        作者：{{ object.author.username }}<br>
+                        版权声明：本文版权归作者所有，欢迎转载，但未经作者同意必须保留此段声明，且在文章页面明显位置给出原文链接。<br>
+                        发表时间：{{ object.pub_date | date:'Y-m-d H:i:s' }}
                     </p>
                     <div class="blog-tags">
                         Category :
