--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4273,8 +4273,8 @@ blockquote p {
 
 .blog-tags {
     border-top: 1px solid #f1f1f1;
-    margin:30px 0 20px 0;
-    padding-top: 30px;
+    margin:18px 0 18px 0;
+    padding-top: 0;
     display: inline-block;
     width: 100%;
 }
