--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4282,8 +4282,8 @@ blockquote p {
 .blog-tags a {
     background: #f1f1f1;
     color: #808086;
-    padding: 5px 10px;
-    margin-left: 8px;
+    /*padding: 5px 10px;*/
+    /*margin-left: 8px;*/
     border-radius: 3px;
     -webkit-border-radius: 3px;
 }
