修改部分css 修改了部分html布局

--- a/blog/templates/blog/post_comment.html
+++ b/blog/templates/blog/post_comment.html
@@ -2,7 +2,7 @@
 
 <div class="panel">
     <div class="panel-body">
-        <h1 class="text-center cmnt-head">{{ comments|length }} Comments</h1>
+        <h1 class="cmnt-head">{{ comments|length }} Comments</h1>
         {% for comment in comments %}
         <div class="media blog-cmnt">
             <a href="javascript:;" class="pull-left">
