--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4272,7 +4272,7 @@ blockquote p {
 }
 
 .blog-tags {
-    border-top: 1px solid #f1f1f1;
+    /*border-top: 1px solid #f1f1f1;*/
     margin:18px 0 18px 0;
     padding-top: 0;
     display: inline-block;
@@ -4399,7 +4399,7 @@ ol.comment-list {
 }
 
 .leave-cmnt {
-    width: 70%;
+    width: 100%;
     margin: 20px auto;
 }
 
