--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,8 @@
 
     <link href="{% static "css/style.css" %}" rel="stylesheet">
     <link href="{% static "css/style-responsive.css" %}" rel="stylesheet">
-    <!--link rel="stylesheet" href="{% static "js/styles/zenburn.css" %}" /-->
-    <link rel="stylesheet" href="{% static "js/styles/monokai.css" %}" />
+    <!--link rel="stylesheet" href="{% static "css/zenburn.css" %}" /-->
+    <link rel="stylesheet" href="{% static "css/monokai.css" %}" />
 
     {% block css %}
     {% endblock %}
