添加快递友情链接

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -67,7 +67,7 @@
                                 <h1>邹亚鹏</h1>
                                 <span class="designation">云计算软件工程师</span>
                                 <p>
-                                    I have 10 years of experience designing for the web, and specialize in the areas of user interface design, interaction design, visual design and prototyping. I’ve worked with notable startups including Pearl Street Software.
+                                    没有时间弄呀，哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈
                                 </p>
                                 <a class="btn p-follow-btn pull-left" href="#"> <i class="fa fa-check"></i> Following</a>
 
