--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -19,6 +19,7 @@
             {% render_month_links %}
             {% render_category_links %}
             {% render_assess_links %}
+            {% render_friendly_links %}
         </div>
         {% include 'blog/post_list.html' with object_list=object_list %}
     </div>
