更新了font awesome的版本

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -74,17 +74,22 @@
                                 <ul class="p-social-link pull-right">
                                     <li>
                                         <a href="#">
-                                            <i class="fa fa-facebook"></i>
-                                        </a>
-                                    </li>
-                                    <li class="active">
-                                        <a href="#">
-                                            <i class="fa fa-twitter"></i>
+                                            <i class="fa fa-wechat"></i>
                                         </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <i class="fa fa-google-plus"></i>
+                                            <i class="fa fa-github"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-weibo"></i>
+                                        </a>
+                                    </li>
+                                    <li class="active">
+                                        <a target="_blank" href="http://sighttp.qq.com/authd?IDKEY=27b9946bc4b1d2dabe3945db1078b0a2144a16b2b7e3a654">
+                                            <i class="fa fa-qq"></i>
                                         </a>
                                     </li>
                                 </ul>
