--- a/blog/templates/blog/share.html
+++ b/blog/templates/blog/share.html
@@ -6,7 +6,7 @@
     url:location.href,
     desc:'', /*分享理由(风格应模拟用户对话),支持多分享语随机展现（使用|分隔）*/
     title:document.title, /*分享标题(可选)*/
-    summary:document.getElementById("blog_body").innerText, /*分享摘要(可选)*/
+    summary:document.getElementById("blog_body").innerText.slice(0,100), /*分享摘要(可选)*/
     pics:'', /*分享图片(可选)*/
     flash: '', /*视频地址(可选)*/
     site:'邹亚鹏的个人博客', /*分享来源(可选) 如：QQ分享*/
@@ -29,7 +29,7 @@ var p = {
 url:location.href,
 showcount:'1',/*是否显示分享总数,显示：'1'，不显示：'0' */
 desc:'',/*默认分享理由(可选)*/
-summary: document.getElementById("blog_body").innerText,/*分享摘要(可选)*/
+summary: document.getElementById("blog_body").innerText.slice(0,100),/*分享摘要(可选)*/
 title:document.title,/*分享标题(可选)*/
 site:'邹亚鹏的个人博客',/*分享来源 如：腾讯网(可选)*/
 pics:'', /*分享图片的路径(可选)*/
