--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ Author: ThemeBucket
 
 @import url(http://fonts.lug.ustc.edu.cn/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 /*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);*/
-@import url('bootstrap.min.css');
+@import url('bootstrap.css');
 @import url('bootstrap-reset.css');
 @import url('jquery-ui-1.10.3.css');
 @import url('../fonts/css/font-awesome.min.css');
