删除了部分不用的css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,7 +10,7 @@ Author: ThemeBucket
 @import url('bootstrap.css');
 @import url('bootstrap-reset.css');
 @import url('jquery-ui-1.10.3.css');
-@import url('../fonts/css/font-awesome.min.css');
+@import url('../fonts/css/font-awesome.css');
 
 /*@font-face {*/
     /*font-family: 'Open Sans';*/
