--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-{#                        <li><a href="{% url 'account:profile' %}"><i class="fa fa-user"></i>  个人信息</a></li>#}
+                        <li><a href="{% url 'account:profile' %}"><i class="fa fa-user"></i>  个人信息</a></li>
                         <li><a href="{% url 'account:logout' %}"><i class="fa fa-sign-out"></i> 注销</a></li>
                     </ul>
                 </li>
