--- a/accounts/templates/accounts/user_profile.html
+++ b/accounts/templates/accounts/user_profile.html
@@ -68,6 +68,19 @@
                         </div>
 
                         <div class="form-group">
+                            <label class="col-sm-2 col-sm-2 control-label">{{ form.enable_email.label }}</label>
+                            <div class="col-sm-10">
+                                {{ form.enable_email }}
+                                {% for error in form.enable_email.errors %}
+                                    <div class="has-error">
+                                        <p class="help-block">{{ error }}</p>
+                                    </div>
+                                {% endfor %}
+
+                            </div>
+                        </div>
+
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">{{ form.sex.label }}</label>
 
                             <div class="col-sm-9 icheck">
