--- a/blog/templates/blog/share.html
+++ b/blog/templates/blog/share.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load blog %}
 
 <script type="text/javascript">
     (function(){
@@ -45,3 +46,6 @@ document.write(['<a version="1.0" class="qzOpenerDiv" href="http://sns.qzone.qq.
 })();
 </script>
 <script src="http://qzonestyle.gtimg.cn/qzone/app/qzlike/qzopensl.js#jsdate=20111201" charset="utf-8"></script>
+
+
+<a class="btn btn-share pull-right" href="#new-comment">评价</a>
