--- a/static/css/style.css
+++ b/static/css/style.css
@@ -181,7 +181,7 @@ hr {
 ----------------------------------*/
 
 .left-side {
-    width: 240px;
+    width: 180px;
     position: absolute;
     top: 0;
     left: 0;
@@ -203,14 +203,16 @@ hr {
 }
 
 .logo {
-    padding-top: 5px;
+    /*padding-top: 5px;*/
     height: 50px;
+    text-align:center;
 }
 
 .logo a {
     font-size: 28px;
     color: #fff;
-    margin: 0 0 0 20px;
+    /*margin: 0 0 0 20px;*/
+    margin: 0 auto;
     text-decoration: none;
     display: inline-block;
 }
@@ -220,7 +222,7 @@ hr {
 }
 
 .left-side-collapsed .logo-icon {
-    height: 45px;
+    height: 50px;
     margin-top: -48px;
     display: block !important;
 }
@@ -610,7 +612,7 @@ h5.left-nav-title {
 }
 
 .notification-menu .dropdown-toggle {
-    padding: 12px 10px;
+    padding: 6px 10px;
     border-color: #fff;
     background: #fff;
     -moz-border-radius: 0;
@@ -634,7 +636,7 @@ h5.left-nav-title {
 .notification-menu .dropdown-toggle img {
     vertical-align: middle;
     margin-right: 5px;
-    width: 26px;
+    width: 38px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
@@ -843,7 +845,7 @@ h5.left-nav-title {
     position: fixed;
     top: 0;
     left: 0;
-    width: 240px;
+    width: 180px;
     z-index: 100;
     background: #424f63;
 
@@ -856,7 +858,7 @@ h5.left-nav-title {
 .sticky-header .header-section {
     position: fixed;
     top: 0;
-    left: 240px;
+    left: 180px;
     width: 100%;
     z-index: 100;
 }
@@ -866,7 +868,7 @@ h5.left-nav-title {
 }
 
 .sticky-header .menu-right {
-    margin-right: 255px;
+    margin-right: 195px;
 }
 
 .sticky-header.left-side-collapsed .header-section {
@@ -899,7 +901,7 @@ h5.left-nav-title {
 ------------------------------*/
 
 .main-content {
-    margin-left: 240px;
+    margin-left: 180px;
     background: #eff0f4;
     min-height: 1000px;
 }
