--- a/templates/base.html
+++ b/templates/base.html
@@ -33,91 +33,15 @@
     <section>
     <!-- left side start-->
     <div class="left-side sticky-left-side">
-        <!--logo and iconic logo start-->
-        <div class="logo">
-            <a href="{% url 'blog:index' %}"><img src="{% static "images/logo.png" %}" alt=""></a>
-        </div>
-        <div class="logo-icon text-center">
-            <a href="{% url 'blog:index' %}"><img src="{% static "images/logo_icon.png" %}" alt=""></a>
-        </div>
-        <!--logo and iconic logo end-->
-
-        <div class="left-side-inner">
-            <!--sidebar nav start-->
-            {% include 'sidebar.html' %}
-            <!--sidebar nav end-->
-
-        </div>
+        {% include 'logo.html' %}
+        {% include 'sidebar.html' %}
     </div>
     <!-- left side end-->
 
     <!-- main content start-->
     <div class="main-content" >
         <!-- header section start-->
-        <div class="header-section">
-
-        <!--toggle button start-->
-        <a class="toggle-btn"><i class="fa fa-bars"></i></a>
-        <!--toggle button end-->
-
-        <!--search start-->
-        <form class="searchform" action="{% url 'blog:index' %}" method="post">
-            <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
-        </form>
-        <!--search end-->
-
-        <!--notification menu start -->
-        <div class="menu-right">
-            <ul class="notification-menu">
-                {% if user.is_authenticated %}
-                <li>
-                    <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
-                        <i class="fa fa-bell-o"></i>
-                        <span class="badge">1</span>
-                    </a>
-{#                    <div class="dropdown-menu dropdown-menu-head pull-right">#}
-{#                        <h5 class="title">通知</h5>#}
-{#                        <ul class="dropdown-list normal-list">#}
-{#                            <li class="new">#}
-{#                                <a href="">#}
-{#                                    <span class="label label-danger"><i class="fa fa-bolt"></i></span>#}
-{#                                    <span class="name">Server #1 overloaded.  </span>#}
-{#                                    <em class="small">34 mins</em>#}
-{#                                </a>#}
-{#                            </li>#}
-{#                            <li class="new"><a href="">显示所有通知</a></li>#}
-{#                        </ul>#}
-{#                    </div>#}
-                </li>
-                <li>
-                    <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                        {#<img src="{% static user.user_profile.avatar %}" alt="" />#}
-                        <img src="/media/{{ user.user_profile.avatar }}" alt="" />
-                        {{ user.username }}
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
-                        <li><a href="{% url 'account:profile' %}"><i class="fa fa-user"></i>  个人信息</a></li>
-                        <li><a href="{% url 'account:logout' %}"><i class="fa fa-sign-out"></i> 注销</a></li>
-                    </ul>
-                </li>
-                {% else %}
-                    <li>
-                        <a href="{% url 'account:signup' %}" class="btn btn-default dropdown-toggle info-number">
-                            注册
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{% url 'account:login' %}" class="btn btn-default dropdown-toggle info-number">
-                            登录
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-        <!--notification menu end -->
-
-        </div>
+        {% include 'header.html' %}
         <!-- header section end-->
 
         <!-- page heading start-->
@@ -152,7 +76,6 @@
 
     <!--common scripts for all pages-->
     <script src="{% static "js/scripts.js" %}"></script>
-
 
     {% block js %}
     {% endblock %}
