--- a/templates/500.html
+++ b/templates/500.html
@@ -11,12 +11,12 @@
   <title>500 Page</title>
 
     <link href="{% static "css/style.css" %}" rel="stylesheet">
-    <link href="{% static "css/style-responsive.css" %}" rel="stylesheet">
+{#    <link href="{% static "css/style-responsive.css" %}" rel="stylesheet">#}
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
-  <script src="js/html5shiv.js"></script>
-  <script src="js/respond.min.js"></script>
+{#  <script src="js/html5shiv.js"></script>#}
+{#  <script src="js/respond.min.js"></script>#}
   <![endif]-->
 </head>
 
@@ -27,20 +27,20 @@
 
         <section class="error-wrapper text-center">
             <h1><img alt="" src="{% static "images/500-error.png" %}"></h1>
-            <h2>OOOPS!!!</h2>
-            <h3>Something went wrong.</h3>
-            <p class="nrml-txt">Why not try refreshing you page? Or you can <a href="#">contact our support</a> if the problem persists.</p>
-            <a class="back-btn" href="{% url 'blog:index' %}"> Back To Home</a>
+            <h2>哎呀！！！BUG！！！</h2>
+{#            <h3>我的程序有BUG啦！！！</h3>#}
+{#            <p class="nrml-txt">Why not try refreshing you page? Or you can <a href="#">contact our support</a> if the problem persists.</p>#}
+            <a class="back-btn" href="{% url 'blog:index' %}"> 返回主页 </a>
         </section>
 
     </div>
 </section>
 
 <!-- Placed js at the end of the document so the pages load faster -->
-<script src="{% static "js/jquery-1.10.2.min.js" %}"></script>
-<script src="{% static "js/jquery-migrate-1.2.1.min.js" %}"></script>
-<script src="{% static "js/bootstrap.min.js" %}"></script>
-<script src="{% static "js/modernizr.min.js" %}"></script>
+{#<script src="{% static "js/jquery-1.10.2.min.js" %}"></script>#}
+{#<script src="{% static "js/jquery-migrate-1.2.1.min.js" %}"></script>#}
+{#<script src="{% static "js/bootstrap.min.js" %}"></script>#}
+{#<script src="{% static "js/modernizr.min.js" %}"></script>#}
 
 
 <!--common scripts for all pages-->
