--- a/templates/admin.html
+++ b/templates/admin.html
@@ -26,7 +26,7 @@
     <div class="container ">
 
         <section class="error-wrapper text-center">
-            <h1><img alt="" src="{% static "images/404-error.png" %}"></h1>
+            <h1><img alt="" src="{% static "images/emoticon_smile.png" %}"></h1>
             <h2>然而并没有这个界面</h2>
 {#            <h3>We Couldn’t Find This Page</h3>#}
             <a class="back-btn" href="{% url 'blog:index' %}"> 返回主页 </a>
