--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -23,12 +23,13 @@
         <div class="col-md-9">
             <div class="panel">
                 <div class="panel-body">
-		    <h1 class="mtop35">
-                        <a href="#">{{ object.headline }}</a>
+                    <h1 class="mtop35">
+                        <a href="{{ post.get_absolute_url }}">{{ object.headline }}</a>
+                        <small>{{ post.hitcount }}次阅读</small>
                         {% if post.is_active == False %}<i class="fa fa-lock"></i>{% endif %}
                     </h1>
                     <p class="auth-row">
-			            作者：{{ object.author }}<br>
+                        作者：{{ object.author }}<br>
                         版权声明：本文版权归作者所有，欢迎转载，但未经作者同意必须保留此段声明，且在文章页面明显位置给出原文链接。<br>
                         发表时间：{{ object.pub_date | date:'Y-m-d H:i:s' }}
                     </p>
@@ -44,10 +45,6 @@
                         <hr>
                         {% include 'blog/share.html' %}
                     </div>
-
-{#                    <div class="blog-tags">#}
-{#                        {% include 'blog/share.html' %}#}
-{#                    </div>#}
                 </div>
             </div>
             {% include 'blog/post_comment.html' with comments=object.post_comment.all %}
